samples/_failures_safe/1761377178_834332_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c6f2238.c: In function ‘main’:
./samples/SAFE/__tmp_5c6f2238.c:125:56: error: expected ‘;’ at end of input
  125 |     for (int i = entry_count - 1; i >= 0 && error_shown
      |                                                        ^
      |                                                        ;
./samples/SAFE/__tmp_5c6f2238.c:125:5: error: expected declaration or statement at end of input
  125 |     for (int i = entry_count - 1; i >= 0 && error_shown
      |     ^~~
